--- a/views/addOrEdit.handlebars
+++ b/views/addOrEdit.handlebars
@@ -1,1 +1,33 @@
-<h2>功能較複雜</h2>
+{{!-- (下1) 之後改格式 --}}
+<span>*必填欄位</span>
+<h2>{{title}}</h2>
+
+<div class="container">
+  <form action="/costs/new" method="post">
+    <div class="mb-3">
+      <label for="name" class="form-label">名稱*：<span style='color: red;'>*必填</span></label>
+      <input type="text" name="name" id="name" placeholder="例：出去玩" value="{{record.name}}" required>
+    </div>
+    <div class="mb-3">
+      <label for="date" class="form-label">日期*：<span style='color: red;'>*必填</span></label>
+      <input type="date" name="date" id="date" value="{{record.date}}" required>
+    </div>
+    <div class="mb-3">
+      <label for="sort" class="form-label">類別<span style='color: red;'>*必填</span></label>
+      <select name="sort" id="sort" aria-valuetext="{{record.sort}}" required>
+        <option value="家居物業">家居物業</option>
+        <option value="交通出行">交通出行</option>
+        <option value="休閒娛樂">休閒娛樂</option>
+        <option value="餐飲食品">餐飲食品</option>
+        <option value="其他">其他</option>
+      </select>
+    </div>
+    <div class="mb-3">
+      <label for="amount" class="form-label">金額*：<span style='color: red;'>*必填</span></label>
+      <input type="number" name="amount" id="amount" placeholder="例：300000" value="{{record.amount}}" required>
+    </div>
+    <button type="submit" class="btn btn-primary">{{submitWord}}</button>
+    {{!-- <div class="input-group ">
+    </div> --}}
+  </form>
+</div>
