--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,29 @@
-<h1>hello ~</h1>
+<ul class="list-group">
+  {{#each records}}
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-auto me-auto">
+        {{!-- 圖示，這裡等下用 if 解決 --}}
+        <i class="fa-solid fa-house"></i>
+        {{!-- 圖示 end --}}
+      </div>
+      <div class="col-auto me-auto">
+        <h4>
+          {{ this.name }}
+        </h4>
+        <h6>{{this.date}} </h6>
+      </div>
+      <div class="col-auto">
+        <a class="btn btn-success" href="./costs/edit/{{ this._id }}">修改</a>
+        <form action="./costs/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
+          <button class="btn btn-danger" type="submit">刪除</button>
+        </form>
+      </div>
+    </div>
+  </li>
+  {{/each}}
+</ul>
+
+
+
+<a class="btn btn-primary mb-3" href="/costs/add">新增支出</a>
