--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>家庭記帳本</title>
 
   {{!-- ------------------------之後再看要不要改掉 bootstrap --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,11 +16,10 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">家庭記帳本</a>
+        <a class="navbar-brand" href="/">
+          {{#if isAuthenticated}}{{user.name}} {{else}}我{{/if}}的家庭記帳本
+        </a>
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
 
           {{#if isAuthenticated}}
           <li class="nav-item">
