--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,1 +1,36 @@
-<h2>register</h2>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mt-3">Register</h1>
+      {{> message}}
+      {{!-- (上1) 功能：會自動在 views 資料夾下找 message 這個檔案，引入並顯示 --}}
+
+      <form action="/users/register" method="POST">
+        <div class="mb-3">
+          <label for="name" class="mb-2">Name</label>
+          <input type="text" id="name" name="name" class="form-control" placeholder="Enter Name" value="{{name}}"
+            autofocus>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="mb-2">Email</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" value="{{email}}">
+        </div>
+        <div class="mb-3">
+          <label for="password" class="mb-2">Password</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password"
+            value="{{password}}">
+        </div>
+        <div class="mb-3">
+          <label for="confirmPassword" class="mb-2">Confirm Password</label>
+          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
+            placeholder="Enter Password Again" value="{{confirmPassword}}">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Register</button>
+        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
+      </form>
+      <p class="lead mt-4">
+        Have an Account? <a href="/users/login">Login</a>
+      </p>
+    </div>
+  </div>
+</div>
