--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,11 @@
   {{!-- ------------------------之後再看要不要改掉 bootstrap --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
+  {{!-- navebar --}}
   <header>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
@@ -23,7 +25,8 @@
 
           {{#if isAuthenticated}}
           <li class="nav-item">
-            <a class="nav-link" href="/users/logout">登出</a>
+            <a class="nav-link " href="/users/logout"><button class="btn btn-outline-dark"
+                style="color: rgb(255, 115, 0); font-weight: bold;">登出</button></a>
           </li>
           {{else}}
           <li class="nav-item">
@@ -32,41 +35,20 @@
           {{/if}}
 
         </ul>
-        {{!-- (下1) 拿來做下拉式按鈕的 --}}
-        {{!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button> --}}
-        {{!-- <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-
-            {{#if isAuthenticated}}
-            <li class="nav-item">
-              <a class="nav-link" href="/users/logout">登出</a>
-            </li>
-            {{else}}
-            <li class="nav-item">
-              <a class="nav-link" href="/users/login">登入</a>
-            </li>
-            {{/if}}
-
-          </ul>
-        </div>
-      </div> --}}
     </nav>
   </header>
 
   <main>
-    {{{body}}}
+    <div class="container mt-5" style="width: 90%;">
+      {{{body}}}
+    </div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/5dabb2588f.js" crossorigin="anonymous"></script>
+  <script src='/JS/background.js'></script>
 </body>
 
 </html>
