feat: 完成編輯頁面切版，完全依照作業要求

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,8 +30,12 @@
           </li>
           {{else}}
           <li class="nav-item">
-            <a class="nav-link" href="/users/login">登入</a>
+            <a class="nav-link " href="/users/login"><button class="btn btn-outline-dark"
+                style="color: rgb(255, 115, 0); font-weight: bold;">登入</button></a>
           </li>
+          {{!-- <li class="nav-item">
+            <a class="nav-link" href="/users/login">登入</a>
+          </li> --}}
           {{/if}}
 
         </ul>
