--- a/views/addOrEdit.handlebars
+++ b/views/addOrEdit.handlebars
@@ -1,20 +1,34 @@
 {{!-- (下1) 之後改格式 --}}
-<span>*必填欄位</span>
-<h2>{{pageInfo.title}}</h2>
+<div class="row mb-3 align-items-center ">
+  <div class="col-3 text-end">
+    <span>*必填欄位</span>
+  </div>
+  <div class="col-1"></div>
+  <div class="col text-center">
+    <h2>{{pageInfo.title}}</h2>
+  </div>
+  <div class="col"></div>
+</div>
 
-<div class="container">
+<div class="text-end">
   <form action="{{pageInfo.action}}" method="post">
-    <div class="mb-3">
-      <label for="name" class="form-label">名稱*：<span style='color: red;'>*必填</span></label>
-      <input type="text" name="name" id="name" placeholder="例：出去玩" value="{{record.name}}" autofocus required>
+    <div class="row mb-5">
+      <label for="name" class="col-3 form-label ">名稱<span style='color: red;'>*</span>：</label>
+      <div class="col-1"></div>
+      <input class="col" type="text" name="name" id="name" placeholder="例：出去玩" value="{{record.name}}" autofocus
+        required>
+      <div class="col"></div>
     </div>
-    <div class="mb-3">
-      <label for="date" class="form-label">日期*：<span style='color: red;'>*必填</span></label>
-      <input type="date" name="date" id="date" value="{{record.date}}" required>
+    <div class="row mb-5">
+      <label for="date" class="col-3 form-label">日期<span style='color: red;'>*</span>：</label>
+      <div class="col-1"></div>
+      <input class="col" type="date" name="date" id="date" value="{{record.date}}" required>
+      <div class="col"></div>
     </div>
-    <div class="mb-3">
-      <label for="categoryName" class="form-label">類別<span style='color: red;'>*必填</span></label>
-      <select name="categoryName" id="categoryName" required>
+    <div class="row mb-5">
+      <label for="categoryName" class="col-3 form-label">類別<span style='color: red;'>*</span>：</label>
+      <div class="col-1"></div>
+      <select class="col" name="categoryName" id="categoryName" required>
         <option value="">--請選下列任一個--</option>
         <option value="家居物業" {{#is record.categoryName '家居物業' }} selected {{/is}}>家居物業</option>
         <option value="交通出行" {{#is record.categoryName '交通出行' }} selected {{/is}}>交通出行</option>
@@ -22,13 +36,19 @@
         <option value="餐飲食品" {{#is record.categoryName '餐飲食品' }} selected {{/is}}>餐飲食品</option>
         <option value="其他">其他</option>
       </select>
+      <div class="col"></div>
     </div>
-    <div class="mb-3">
-      <label for="amount" class="form-label">金額*：<span style='color: red;'>*必填</span></label>
-      <input type="number" name="amount" id="amount" placeholder="例：300000" value="{{record.amount}}" required>
+    <div class="row mb-5">
+      <label for="amount" class="col-3 form-label">金額<span style='color: red;'>*</span>：</label>
+      <div class="col-1"></div>
+      <input class="col" type="number" name="amount" id="amount" placeholder="例：300000" value="{{record.amount}}"
+        required>
+      <div class="col"></div>
     </div>
-    <button type="submit" class="btn btn-primary">{{pageInfo.submitWord}}</button>
-    {{!-- <div class="input-group ">
-    </div> --}}
+    <div class="row">
+      <div class="col"></div>
+      <button type="submit" class="col btn btn-primary w-100">{{pageInfo.submitWord}}</button>
+      <div class="col"></div>
+    </div>
   </form>
 </div>
