--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,11 +15,11 @@
           <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password"
             required>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
+        <button type="submit" class="btn btn-outline-primary btn-block">Login</button>
+        <a href="/auth/facebook" class="btn btn-outline-info btn-block">Facebook Login</a>
       </form>
       <p class="lead mt-4">
-        No Account? <a href="/users/register">Register</a>
+        No Account? <a class="btn btn-outline-success" href="/users/register">Register</a>
       </p>
     </div>
   </div>
